# ppstats

./: .gitignore  CONTEXT.md  README.md  ROADMAP.md  pyproject.toml
demo/: ppstats_demo.ipynb
docs/issues/: postpyc-nonumpy-gufunc-fallback.md  postpython-nan-lowering.md
ppstats/: __init__.py  _descriptive.py  _distributions.py
scripts/: build_ext.py  build_native.py  build_prefix.py
tests/: test_descriptive.py  test_distributions.py  test_native_abi.py  test_native_default.py  test_native_ext.py
