[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

# ─── Project metadata ────────────────────────────────────────────────────────

[project]
name = "ppstats"
version = "0.1.0"
description = "scipy.stats reimplemented in postpyc — typed descriptive-statistics and distribution kernels that compile to native code."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Travis E. Oliphant" },
    { name = "Reed A. Pennock" },
]
keywords = ["statistics", "scipy", "gufunc", "ufunc", "postpyc", "postyp", "aot", "numerical"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "postpyc>=0.3.0",
    "postyp>=0.3.0",
]

[project.optional-dependencies]
numpy = ["numpy"]
dev = ["pytest>=7", "numpy"]

[project.urls]
Repository = "https://github.com/openteams-ai/ppstats"
Standard = "https://github.com/openteams-ai/postpython/blob/main/docs/spec.md"

# ─── Build configuration ─────────────────────────────────────────────────────

[tool.hatch.build.targets.wheel]
packages = ["ppstats"]

[tool.hatch.build.targets.sdist]
include = ["ppstats", "tests", "scripts", "README.md", "ROADMAP.md", "pyproject.toml"]

[tool.hatch.metadata]
allow-direct-references = true

# ─── Pixi ────────────────────────────────────────────────────────────────────
# `pixi install -e dev` then `pixi run -e dev test` / `pixi run -e dev build-native`.

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "linux-64", "linux-aarch64", "win-64"]

[tool.pixi.pypi-dependencies]
ppstats = { path = ".", editable = true }

[tool.pixi.dependencies]
python = ">=3.10"
# A C compiler is required to build the kernels to native code.
c-compiler = "*"

[tool.pixi.feature.dev.dependencies]
pytest = ">=7"
numpy = "*"

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
test = { cmd = "pytest tests/", description = "Run the test suite (interpreted mode)." }
build-native = { cmd = "python scripts/build_native.py", description = "Compile each kernel module to a native shared library and report status." }
build-prefix = { cmd = "postpyc build ppstats/__init__.py --prefix dist/prefix --module-name ppstats", description = "Build the libppstats package-manager layout under dist/prefix." }
build-ext = { cmd = "python scripts/build_ext.py", description = "Build ppstats_native, an importable NumPy-ufunc extension module." }
